--- a/environment.yml
+++ b/environment.yml
@@ -1,29 +1,33 @@
-name: face
+name: face_trait_judgment
 channels:
   - defaults
   - conda-forge
+  - ets
   - nodefaults
 dependencies:
-  - scipy
-  - jupyterlab
-  - pandas
-  - seaborn
-  - bokeh
-  - scikit-learn
-  - scikit-image
-  - h5py
-  - tqdm
-  - importlib_resources
-  - conda-forge::pingouin
-  - conda-forge::adjusttext
-  - conda-forge::opencv
-  - plotly
-  - umap-learn
-  - rpy2
-  - cmake
-  - dlib
-  - docopt
-  - matplotlib
-  - numpy
-  - spacy
-prefix: /opt/anaconda3/envs/face
+  - json5=0.9.6
+  - jupyterlab=4.0.11
+  - matplotlib=3.9.2
+  - numpy=1.26.4
+  - opencv=4.10.0
+  - pandas=2.2.2
+  - pillow=10.4.0
+  - scikit-learn=1.4.2
+  - scikit-image=0.23.2
+  - scipy=1.14.1
+  - seaborn=0.13.2
+  - statsmodels=0.14.2
+  - tqdm=4.66.4
+  - python=3.12.2
+  - rpy2=3.5.11
+  - cmake=3.30.5
+  - spacy=3.7.2
+  - pingouin=0.5.5
+  - adjusttext=1.3.0
+  - pip:
+      - facemorpher==5.2.dev0
+      - qc-procrustes==1.1.0
+      - rsatoolbox==0.2.0
+      - symspellpy==6.9.0
+      - factor_analyzer=0.5.1
+prefix: /opt/anaconda3/envs/face_trait_judgment
