--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,11 @@
 name: face_trait_judgment
 channels:
-  - defaults
   - conda-forge
-  - ets
-  - nodefaults
 dependencies:
-  - json5=0.9.6
+  - json5
+  - dlib
+  - spacy
+  - pip=24.0
   - jupyterlab=4.0.11
   - matplotlib=3.9.2
   - numpy=1.26.4
@@ -16,12 +16,12 @@ dependencies:
   - scikit-image=0.23.2
   - scipy=1.14.1
   - seaborn=0.13.2
-  - statsmodels=0.14.2
+  - statsmodels
   - tqdm=4.66.4
-  - python=3.12.2
+  - python=3.12
+  - r-base=4.3.3
   - rpy2=3.5.11
   - cmake=3.30.5
-  - spacy=3.7.2
   - pingouin=0.5.5
   - adjusttext=1.3.0
   - pip:
