--- a/environment_old_rpy2.yml
+++ b/environment_old_rpy2.yml
@@ -5,7 +5,9 @@ dependencies:
   - json5=0.12.1
   - dlib=19.24.2
   - spacy=3.8.7
-  - r-base=4.4.3
+  - r-base=4.3.3
+# depending on your system, if you can't install "r-smacof" for
+# the "smacof" R package in anaconda conda, follow the "run_to_install_MDS_Rpackages.ipynb"
   - pip=24.0
   - jupyterlab=4.0.11
   - matplotlib=3.9.2
@@ -20,7 +22,7 @@ dependencies:
   - statsmodels
   - tqdm=4.66.4
   - python=3.12
-  - rpy2=3.6.2
+  - rpy2=3.5.11
   - cmake=3.30.5
   - pingouin=0.5.5
   - adjusttext=1.3.0
