--- a/environment.yml
+++ b/environment.yml
@@ -16,7 +16,7 @@ dependencies:
   - scikit-learn=1.4.2
   - scikit-image=0.23.2
   - scipy=1.14.1
-  - seaborn=0.13.2ß
+  - seaborn=0.13.2
   - statsmodels
   - tqdm=4.66.4
   - python=3.12
