--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - spacy=3.8.7
   - r-base=4.4.3
   - pip=24.0
-  - jupyterlab=4.0.11
+  - jupyterlab=4.4.6
   - matplotlib=3.9.2
   - numpy=1.26.4
   - opencv=4.10.0
@@ -24,6 +24,7 @@ dependencies:
   - cmake=3.30.5
   - pingouin=0.5.5
   - adjusttext=1.3.0
+  - ipywidgets=8.1.7
   - pip:
       - facemorpher==5.2.dev0
       - qc-procrustes==1.1.0
