--- a/environment.yml
+++ b/environment.yml
@@ -26,9 +26,9 @@ dependencies:
   - adjusttext=1.3.0
   - ipywidgets=8.1.7
   - pip:
-      - facemorpher==5.2.dev0
       - qc-procrustes==1.1.0
       - rsatoolbox==0.2.0
       - symspellpy==6.9.0
       - factor_analyzer==0.5.1
+      - facemorpher==5.2.1
 prefix: /opt/anaconda3/envs/face_trait_judgment
