remove new facemorpher

--- a/environment_new_face_morpher.yml
+++ b/environment_new_face_morpher.yml
@@ -30,5 +30,5 @@ dependencies:
       - rsatoolbox==0.2.0
       - symspellpy==6.9.0
       - factor_analyzer==0.5.1
-      #- facemorpher==5.2.1
+      - facemorpher==5.2.1
 prefix: /opt/anaconda3/envs/face_trait_judgment
